[project]
name = "kagi-bridge-mcp"
version = "0.1.0"
authors = [
    { name = "Ruihang Xia" },
]
description = "Kagi MPC server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]~=1.2.0",
    "pydantic>=2.10.3",
    "playwright>=1.36.0",
]

[project.urls]
Homepage = "https://github.com/waynexia/kagi-bridge-mcp"
Issues = "https://github.com/waynexia/kagi-bridge-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kagi-bridge-mcp = "kagi-bridge-mcp:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]